--- a/t2-cacau/index.html
+++ b/t2-cacau/index.html
@@ -42,6 +42,7 @@
     "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "@azure/msal-browser": "https://esm.sh/@azure/msal-browser@^5.0.2",
+    "@microsoft/microsoft-graph-client": "https://esm.sh/@microsoft/microsoft-graph-client@^3.0.7",
     "@azure/msal-react": "https://esm.sh/@azure/msal-react@^5.0.2"
   }
 }
