--- a/t2-cacau/index.html
+++ b/t2-cacau/index.html
@@ -13,11 +13,11 @@
     "react": "https://esm.sh/react@^19.2.3",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@azure/msal-browser": "https://esm.sh/@azure/msal-browser@^5.0.2",
-    "@microsoft/microsoft-graph-client": "https://esm.sh/@microsoft/microsoft-graph-client@^3.0.7",
-    "@azure/msal-react": "https://esm.sh/@azure/msal-react@^5.0.2",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "@microsoft/microsoft-graph-client": "https://esm.sh/@microsoft/microsoft-graph-client@^3.0.7",
+    "@azure/msal-browser": "https://esm.sh/@azure/msal-browser@^5.0.2",
+    "@azure/msal-react": "https://esm.sh/@azure/msal-react@^5.0.2"
   }
 }
 </script>
