--- a/t2---cacau-logistics/index.html
+++ b/t2---cacau-logistics/index.html
@@ -40,23 +40,34 @@
     body {
       font-family: 'Inter', sans-serif;
       background-color: #f9fafb;
+      margin: 0;
+      padding: 0;
     }
     .backdrop-blur-custom {
       backdrop-filter: blur(8px);
     }
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+    }
   </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "@azure/msal-browser": "https://esm.sh/@azure/msal-browser@^5.0.2",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
-    "@azure/msal-react": "https://esm.sh/@azure/msal-react@^5.0.2"
+  <script type="importmap">
+  {
+    "imports": {
+      "react": "https://esm.sh/react@^19.2.3",
+      "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+      "react/": "https://esm.sh/react@^19.2.3/",
+      "@azure/msal-browser": "https://esm.sh/@azure/msal-browser@^5.0.2",
+      "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
+      "@azure/msal-react": "https://esm.sh/@azure/msal-react@^5.0.2"
+    }
   }
-}
-</script>
+  </script>
 <link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-gray-50 text-gray-900 overflow-hidden">
