--- a/gerenciamento-de-cargas-t2---cacau/index.html
+++ b/gerenciamento-de-cargas-t2---cacau/index.html
@@ -46,7 +46,7 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "@azure/msal-browser": "https://esm.sh/@azure/msal-browser@^3.10.0",
     "framer-motion": "https://esm.sh/framer-motion@^11.0.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.344.0"
+    "lucide-react": "https://esm.sh/lucide-react@0.474.0"
   }
 }
 </script>
