--- a/gerenciamento-de-cargas-t2---cacau/index.html
+++ b/gerenciamento-de-cargas-t2---cacau/index.html
@@ -8,35 +8,32 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body { 
           font-family: 'Plus Jakarta Sans', sans-serif;
-          background-color: #f8fafc;
-          overflow-x: hidden;
+          background-color: #f1f5f9;
+          color: #1e293b;
         }
         .glass {
-          background: rgba(255, 255, 255, 0.75);
-          backdrop-filter: blur(16px);
-          -webkit-backdrop-filter: blur(16px);
-          border: 1px solid rgba(255, 255, 255, 0.3);
+          background: rgba(255, 255, 255, 0.9);
+          backdrop-filter: blur(8px);
+          -webkit-backdrop-filter: blur(8px);
+          border: 1px solid #e2e8f0;
         }
-        .text-gradient {
-          background: linear-gradient(135deg, #004a99 0%, #00adef 100%);
-          -webkit-background-clip: text;
-          -webkit-text-fill-color: transparent;
+        .btn-primary {
+          background-color: #004a99;
+          color: white;
+          transition: all 0.2s;
         }
-        @keyframes blob {
-          0% { transform: translate(0px, 0px) scale(1); }
-          33% { transform: translate(30px, -50px) scale(1.1); }
-          66% { transform: translate(-20px, 20px) scale(0.9); }
-          100% { transform: translate(0px, 0px) scale(1); }
+        .btn-primary:hover {
+          background-color: #003d7a;
         }
-        .animate-blob {
-          animation: blob 7s infinite;
+        .card {
+          background: white;
+          border: 1px solid #e2e8f0;
+          border-radius: 0.75rem;
         }
-        .animation-delay-2000 { animation-delay: 2s; }
-        .animation-delay-4000 { animation-delay: 4s; }
     </style>
 <script type="importmap">
 {
@@ -52,7 +49,7 @@
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-<body class="bg-slate-50 text-slate-900 overflow-x-hidden antialiased">
+<body class="antialiased">
     <div id="root"></div>
 <script type="module" src="/index.tsx"></script>
 </body>
